src/styles.scss
@use '@angular/material' as mat;

$theme: mat.define-theme();

@include mat.core();
@include mat.color-variants-backwards-compatibility($theme);

@mixin theme($theme) {
  /*
    Beépített komponensek
  */
  app-navbar {
    color: mat.get-theme-color($theme, primary);
  }

  mat-sidenav {
    border-radius: 0px;
  }
  mat-sidenav {
    background: mat.get-theme-color($theme, primary-container);
  }
  
  mat-toolbar {
    background: mat.get-theme-color($theme, primary-container);
  }
  mat-toolbar.secondary {
    background: white; // #b89adb;
  }

  button.error:enabled {
    background: mat.get-theme-color($theme, error);
    color: white;
  }

  /*
    HTML komponensek
  */
  tr.selected-row {
    background: mat.get-theme-color($theme, primary-container);
  }
  
  /*
    Snackbars
  */
  .snackbar-info {
    --mdc-snackbar-container-color: green;
    --mdc-snackbar-supporting-text-color: white;
    --mat-snack-bar-button-color: rgb(211, 208, 255);
  }

  .snackbar-warning {
    --mdc-snackbar-container-color: rgba(255, 255, 0, 0.637);
    --mdc-snackbar-supporting-text-color: black;
    --mat-snack-bar-button-color: black;
  }

  .snackbar-error {
    --mdc-snackbar-container-color: red;
    --mdc-snackbar-supporting-text-color: white;
    --mat-snack-bar-button-color: rgb(211, 208, 255);
  }
}

:root {
  @include mat.all-component-themes($theme);
  @include theme($theme);
}

html {
  height: 100%;
}

body {
  font-family: Roboto, "Helvetica Neue", sans-serif;
  margin: 0;
  padding: 30px;
  height: 100%;
}

/*
  General
*/

.m25 {
  margin: 25px !important;
}

.mr10 {
  margin-right: 10px !important;
}

/*
  Misc
*/

.filter-form-field {
  min-width: 500px !important;
  
  flex-direction: row !important;
  flex-wrap: wrap;
  
  align-items: center;
}

.manager-toolbar {
  min-height: 100px;
}

.center-spinner {
  margin: auto;
}

/*
  Tables
*/

.scroll-table {
  display: block;
  overflow-x: scroll;
}

// .scroll-table {
//   height: 400px;
//   width: 550px;
//   max-width: 100%;
//   overflow: auto;
// }

// table {
//   width: 800px;
// }

// td.mat-column-star {
//   width: 20px;
//   padding-right: 8px;
// }

// th.mat-column-position, td.mat-column-position {
//   padding-left: 8px;
// }

// .mat-mdc-table-sticky-border-elem-right {
//   border-left: 1px solid #e0e0e0;
// }

// .mat-mdc-table-sticky-border-elem-left {
//   border-right: 1px solid #e0e0e0;
// }

